--- a/index.html
+++ b/index.html
@@ -30,13 +30,34 @@
 		<p>I'm SollyBunny, I make random crap sometimes and contribute to FOSS projects. Go explore all the crap I have on here, report any issues you find to their respective GitHub pages</p>
 
 		<div class="flex-gallery">
-			<div>
+			<a class="flex-gallery-card" href="https://google.com">
 				<img src="/assets/now.png">
-				<h3>Now</h3>
-				<p>What am I doing right now</p>
-			</div>
-			<div>bye</div>
-			<div>penis</div>
+				<div>
+					<h3>Now</h3>
+					<p>What am I doing right now</p>
+				</div>
+			</a>
+			<!-- <a class="flex-gallery-card" href="https://google.com">
+				<img src="/assets/blog.png">
+				<div>
+					<h3>Blog</h3>
+					<p>It's like a blog, but I don't know what I'm talking about</p>
+				</div>
+			</a>
+			<a class="flex-gallery-card" href="https://google.com">
+				<img src="/assets/now.png">
+				<div>
+					<h3>Now</h3>
+					<p>What am I doing right now</p>
+				</div>
+			</a>
+			<a class="flex-gallery-card" href="https://google.com">
+				<img src="/assets/now.png">
+				<div>
+					<h3>Now</h3>
+					<p>What am I doing right now</p>
+				</div>
+			</a> -->
 		</div>
 
 		<h2>Projects</h2>
